<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cengizcilek.animals_names_sounds_quiz.MainActivity">

    <LinearLayout
        android:id="@+id/opening_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:visibility="visible">

        <EditText
            android:id="@+id/name_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_weight="0"
            android:hint="@string/name_of_the_player"
            android:inputType="textCapWords"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="56dp"
            android:layout_weight="0"
            android:background="#C6863C"
            android:onClick="startGame"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:text="@string/start"
            android:textSize="54sp"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/logo_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/animalslogo"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/quiz_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:id="@+id/quizpic_view"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="4dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/img_0" />

        <TextView
            android:id="@+id/question_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:text="@string/what_is_the_name_of_this_animal"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <Button
                android:id="@+id/answerA_button"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:onClick="answerA"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/tiger"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/answerB_button"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:onClick="answerB"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/elephant"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/answerC__button"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:onClick="answerC"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/dolphin"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/sound_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:onClick="soundOfAnimal"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:text="@string/sound"
            android:textSize="14sp"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp">

            <Button
                android:id="@+id/previous_button"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="previousPicture"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="8dp"
                android:text="@string/previous" />

            <TextView
                android:id="@+id/question_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:text="@string/questionNumber"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="nextPicture"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="8dp"
                android:text="@string/next" />

        </LinearLayout>

        <TextView
            android:id="@+id/player_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text=""
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/final_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/final_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/congratulations"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/final_picture"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="0dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/congratulations"
            android:visibility="visible" />

        <Button
            android:id="@+id/result_share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="sendMail"
            android:text="@string/share_your_score"
            android:textSize="24sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/start_over_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:onClick="startGame"
            android:text="@string/try_again"
            android:textSize="24sp"
            android:visibility="visible" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
